css: Fix styles on small height screen

--- a/src/style.css
+++ b/src/style.css
@@ -670,7 +670,6 @@ kbd {
   .card-inspect .card-inner .card-title {
     font-size: 1em;
     border-width: 1px;
-    transform: translate(0px, -8px);
   }
 
   #upgrade-picker-content .card-rarity,
@@ -680,7 +679,6 @@ kbd {
 
   .card-description {
     font-size: 0.7em;
-    transform: translate(0px, -8px);
   }
 }
 
